--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "count-down",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://monsoir.github.io/CountDownPage/",
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
@@ -13,6 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   }
 }
