What: # (Descript *what* you have done) 按照 create-react-app 官方文档配置部署到 GitHub Pages

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "count-down",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://monsoir.github.io/CountDownPage/",
+  "homepage": "https://monsoir.github.io/ReactCountdown2/",
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
@@ -15,6 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "npm run build&&gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
